<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>
        <variable
            name="item"
            type="Integer" />
        <variable
            name="data"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/containerName_textView_AirConditionerActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.HeadStyle"

            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/container_item_imageView_AirConditionerActivity"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:visibility="gone"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toTopOf="@id/scrollView_AirConditionerActivity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            bind:containerImageSelectedId="@{item}" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/sensingData_loading_animation_AirConditionerActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:lottie_rawRes="@raw/data_loading"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:visibility="gone"
            android:id="@+id/sensingData_textView_AirConditionerActivity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="30sp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_item_imageView_AirConditionerActivity"
            app:layout_constraintBottom_toTopOf="@id/scrollView_AirConditionerActivity"
            />


        <ScrollView
            android:visibility="gone"
            android:id="@+id/scrollView_AirConditionerActivity"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@id/airconditioner_delete_AppCompactToggleButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sensingData_textView_AirConditionerActivity"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                >
                <androidx.appcompat.widget.AppCompatToggleButton
                    android:id="@+id/airconditioner_control_mode_AppCompactToggleButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FAFAFA"
                    android:outlineSpotShadowColor="#FFFFFF"
                    android:textOff="@string/airCon_control_off_control_text"
                    android:textOn="@string/airCon_control_on_control_text"

                    android:textColor="@drawable/select_toggle_color"
                    android:textColorHighlight="#FFBB00"
                    android:textStyle="bold"
                    android:layout_margin="15dp"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/airconditioner_searchData_mode_AppCompactButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_custom"
                    android:outlineSpotShadowColor="#FFFFFF"
                    android:text="@string/get_container_control_text"
                    android:textColor="@drawable/select_toggle_color"
                    android:textColorHighlight="#FFBB00"
                    android:textStyle="bold"
                    android:layout_margin="15dp"

                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/airconditioner_dehumidification_mode_AppCompactButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FAFAFA"
                    android:outlineSpotShadowColor="#FFFFFF"
                    android:text="@string/dehumidification_mode_control_text"
                    android:textColor="@drawable/select_toggle_color"
                    android:textColorHighlight="#FFBB00"
                    android:layout_margin="15dp"
                    android:textStyle="bold"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/airconditioner_power_mode_AppCompactButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FAFAFA"
                    android:outlineSpotShadowColor="#FFFFFF"
                    android:text="@string/power_mode_control_text"
                    android:textColor="@drawable/select_toggle_color"
                    android:textColorHighlight="#FFBB00"
                    android:layout_margin="15dp"
                    android:textStyle="bold"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/airconditioner_timer_mode_AppCompactButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FAFAFA"
                    android:outlineSpotShadowColor="#FFFFFF"
                    android:text="@string/timer_mode_control_text"
                    android:textColor="@drawable/select_toggle_color"
                    android:textColorHighlight="#FFBB00"
                    android:layout_margin="15dp"
                    android:textStyle="bold"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/test5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FAFAFA"
                    android:outlineSpotShadowColor="#FFFFFF"
                    android:text="@string/nonDecide_mode_control_text"
                    android:textColor="@drawable/select_toggle_color"
                    android:textColorHighlight="#FFBB00"
                    android:layout_margin="15dp"
                    android:textStyle="bold"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/test6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FAFAFA"
                    android:outlineSpotShadowColor="#FFFFFF"
                    android:text="@string/nonDecide_mode_control_text"
                    android:textColor="@drawable/select_toggle_color"
                    android:textColorHighlight="#FFBB00"
                    android:layout_margin="15dp"
                    android:textStyle="bold"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/test7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FAFAFA"
                    android:outlineSpotShadowColor="#FFFFFF"
                    android:text="@string/nonDecide_mode_control_text"
                    android:textColor="@drawable/select_toggle_color"
                    android:textColorHighlight="#FFBB00"
                    android:layout_margin="15dp"
                    android:textStyle="bold"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/test8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FAFAFA"
                    android:outlineSpotShadowColor="#FFFFFF"
                    android:text="@string/nonDecide_mode_control_text"
                    android:textColor="@drawable/select_toggle_color"
                    android:textColorHighlight="#FFBB00"
                    android:layout_margin="15dp"
                    android:textStyle="bold"
                    />
            </LinearLayout>
        </ScrollView>
        <androidx.appcompat.widget.AppCompatButton
            android:visibility="gone"
            android:id="@+id/airconditioner_delete_AppCompactToggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/container_delete_text"
            android:background="@drawable/control_button_shape"
            app:layout_constraintTop_toBottomOf="@id/scrollView_AirConditionerActivity"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>